--- a/application/site/public/theme/mobile/css/organisms/_homepage.scss
+++ b/application/site/public/theme/mobile/css/organisms/_homepage.scss
@@ -30,6 +30,10 @@
     }
   }
 
+  .text--strong {
+    color: white;
+  }
+
   .contact__inner {
     margin-left: 0;
     border: 0 none;
