--- a/application/site/public/theme/mobile/css/utilities/_desktop.scss
+++ b/application/site/public/theme/mobile/css/utilities/_desktop.scss
@@ -80,7 +80,8 @@
       color: $textColor;
 
       a,
-      a:hover {
+      a:hover,
+      .text--strong {
         color: $linkColor;
       }
 
